Substituted NIO zipfs for ZipArchive.
git-svn-id: https://svn.code.sf.net/p/vassalengine/svn/VASSAL-src/trunk@6481 67b53d14-2c14-4ace-a08f-0dab2b34000c